Fix picture ingredient button style
The current size is too large for the space we have in this
area. Also the disabled style is redundant now that we use
icon_button.

--- a/app/assets/stylesheets/alchemy/elements.scss
+++ b/app/assets/stylesheets/alchemy/elements.scss
@@ -531,18 +531,11 @@ alchemy-tinymce {
   bottom: 0;
   z-index: 0;
   width: 100%;
-  padding: $default-padding/2;
+  padding: $default-padding;
 
-  a {
-    &.linked {
-      border-radius: $default-border-radius;
-      background-color: $linked-color;
-    }
-
-    &.disabled {
-      opacity: 0.3;
-      cursor: default;
-    }
+  .icon_button {
+    width: 26px;
+    height: 26px;
   }
 }
 
